# phosphor

./: Cargo.toml  README.md  config.example.toml
src/: cli.rs  config.rs  main.rs
src/modules/: audio.rs  git.rs  lyrics.rs  mod.rs  spotify.rs
src/tui/: app.rs  mod.rs  theme.rs
src/tui/widgets/: album_art.rs  git.rs  lyrics.rs  mod.rs  spotify.rs  visualizer.rs
